# Bonsai-demo

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
community-benchmarks/: README.md
community-benchmarks/bonsai/: README.md  TEMPLATE-llama-cpp.md  TEMPLATE-mlx.md  cuda-gb10-27b-linux.md
community-benchmarks/ternary-bonsai/: README.md  TERNARY-TEMPLATE-llama-cpp.md  TERNARY-TEMPLATE-mlx.md
scripts/: build_cpu_linux.sh  build_cuda_linux.sh  build_cuda_windows.ps1  build_mac.sh  common.sh  download_binaries.sh  start_llama_server.ps1  start_llama_server.sh  start_openwebui.sh
scripts/openwebui/: filter_mlx_stream.py  make_demo_db.py  seed_openwebui.py  tool_code_interpreter.py  tool_sql.py  tool_weather.py  tool_web_fetch.py
tests/: test_seed_openwebui.py  test_tool_code_interpreter.py  test_tool_sql.py  test_tool_web_fetch.py
